--- a/src/scss/sub/_contact.scss
+++ b/src/scss/sub/_contact.scss
@@ -1,11 +1,8 @@
 .contact {
-	.location {
-		margin-top: 100px;
-		margin-bottom: 150px;
-
-		.inner {
-			width: 1180px;
-			margin: 0 auto;
+	.inner {
+		.location {
+			margin-top: 100px;
+			margin-bottom: 150px;
 
 			h1 {
 				font: normal 32px/1 'Bebas Neue';
@@ -138,13 +135,8 @@
 				}
 			}
 		}
-	}
-	.faqs {
-		margin-bottom: 100px;
-
-		.inner {
-			width: 1180px;
-			margin: 0 auto;
+		.faqs {
+			margin-bottom: 100px;
 
 			h1 {
 				font: normal 32px/1 'Bebas Neue';
@@ -222,62 +214,52 @@
 }
 
 @media screen and (max-width: $tablet) {
-	.contact {
+	.contact > .inner {
 		.location {
 			width: 100%;
 
-			.inner {
-				width: 100%;
-				padding: 0 30px;
+			.location_wrap {
+				.map_contact {
+					width: 100%;
+					margin-bottom: 20px;
+				}
+				.map_wrap {
+					width: 100%;
 
-				.location_wrap {
-					.map_contact {
-						width: 100%;
-						margin-bottom: 20px;
-					}
-					.map_wrap {
-						width: 100%;
-
-						.branch {
-							li:nth-of-type(1) {
-								border-left: 0;
-							}
-						}
-						#map {
+					.branch {
+						li:nth-of-type(1) {
 							border-left: 0;
 						}
+					}
+					#map {
+						border-left: 0;
 					}
 				}
 			}
 		}
 		.faqs {
-			.inner {
-				width: 100%;
-				padding: 0 30px;
+			> .wrap {
+				article {
+					height: auto;
 
-				> .wrap {
-					article {
-						height: auto;
+					&:nth-of-type(1) {
+						width: 100%;
+						margin-right: 0;
+					}
+					&:nth-of-type(2) {
+						width: 100%;
+					}
+					&:nth-of-type(3) {
+						width: 100%;
+						margin-right: 0;
+						margin-bottom: 20px;
+					}
+					&:nth-of-type(4) {
+						width: 100%;
+					}
 
-						&:nth-of-type(1) {
-							width: 100%;
-							margin-right: 0;
-						}
-						&:nth-of-type(2) {
-							width: 100%;
-						}
-						&:nth-of-type(3) {
-							width: 100%;
-							margin-right: 0;
-							margin-bottom: 20px;
-						}
-						&:nth-of-type(4) {
-							width: 100%;
-						}
-
-						h3 {
-							font-size: 30px;
-						}
+					h3 {
+						font-size: 30px;
 					}
 				}
 			}
