--- a/src/scss/sub/_gallery.scss
+++ b/src/scss/sub/_gallery.scss
@@ -1,12 +1,19 @@
 .gallery {
-	.campaign {
-		width: 100%;
-		margin-top: 100px;
-		margin-bottom: 100px;
+	> .inner {
+		transition: 0s;
 
-		.inner {
-			width: 1180px;
-			margin: 0 auto;
+		.campaign {
+			width: 100%;
+			margin-top: 100px;
+			margin-bottom: 100px;
+
+			.loading {
+				position: fixed;
+				top: 0;
+				left: 50%;
+				transform: translateX(-50%);
+				z-index: -1;
+			}
 
 			h1 {
 				font: normal 32px/1 'Bebas Neue';
@@ -15,19 +22,65 @@
 				margin-bottom: 30px;
 			}
 
-			.wrap_campaign {
-				display: flex;
-				flex-wrap: wrap;
-				justify-content: space-between;
-				align-items: center;
+			> .wrap {
+				transform: translateY(200px);
+				opacity: 0;
+				transition: 1s;
+
+				&.on {
+					transform: translateY(0);
+					opacity: 1;
+				}
 
 				article {
-					width: 19%;
-					margin-bottom: 5%;
+					width: 220px;
+					height: 350px;
+					margin-right: 20px;
+					margin-bottom: 20px;
+					float: left;
 					cursor: pointer;
-					padding-top: 20px;
 					position: relative;
 					transition: 0.5s;
+					overflow: hidden;
+
+					&:nth-of-type(1) {
+						width: 460px;
+						height: 718px;
+
+						.pic {
+							height: 670px;
+						}
+					}
+
+					&:nth-of-type(4),
+					&:nth-of-type(7),
+					&:nth-of-type(18) {
+						margin-right: 0;
+					}
+
+					&:nth-of-type(11) {
+						width: 460px;
+						margin-right: 0;
+					}
+					&:nth-of-type(12) {
+						height: 718px;
+
+						.pic {
+							height: 670px;
+						}
+					}
+
+					&:nth-of-type(15) {
+						width: 460px;
+						margin-right: 0;
+					}
+					&:nth-of-type(16) {
+						width: 460px;
+					}
+					&:nth-of-type(20) {
+						width: 940px;
+						margin-right: 0;
+					}
 
 					span {
 						display: block;
@@ -40,7 +93,7 @@
 						&::after {
 							content: '';
 							display: block;
-							width: 50%;
+							width: calc(100% - 100px);
 							height: 0.1px;
 							position: absolute;
 							top: 50%;
@@ -113,11 +166,10 @@
 				}
 			}
 		}
-	}
-	.shop {
-		.inner {
-			width: 1180px;
-			margin: 0 auto;
+		.shop {
+			width: 100%;
+			margin-bottom: 100px;
+			position: relative;
 
 			h1 {
 				font: normal 32px/1 'Bebas Neue';
@@ -125,8 +177,96 @@
 				letter-spacing: 2px;
 				margin-bottom: 30px;
 			}
-			> div {
-				min-height: 300px;
+			> .wrap {
+				border-top: 1px solid #666;
+				border-bottom: 1px solid #666;
+				border-left: 1px solid transparent;
+				border-right: 1px solid transparent;
+				transform: translateY(200px);
+				opacity: 0;
+				transition: 1s;
+
+				&.on {
+					transform: translateY(0);
+					opacity: 1;
+				}
+
+				article {
+					width: 33.33%;
+					float: left;
+					cursor: pointer;
+					transition: 0.2s;
+
+					&:nth-of-type(2),
+					&:nth-of-type(5),
+					&:nth-of-type(8),
+					&:nth-of-type(11),
+					&:nth-of-type(14),
+					&:nth-of-type(17),
+					&:nth-of-type(20),
+					&:nth-of-type(23),
+					&:nth-of-type(26),
+					&:nth-of-type(29) {
+						.article_wrap {
+							border-right: 1px solid #666;
+							border-left: 1px solid #666;
+						}
+					}
+
+					&:nth-of-type(28),
+					&:nth-of-type(29),
+					&:nth-of-type(30) {
+						.article_wrap h2 {
+							border-bottom: 1px solid transparent;
+						}
+					}
+
+					.article_wrap {
+						padding: 20px 20px 0 20px;
+
+						.pic {
+							width: 100%;
+							height: 450px;
+							margin-bottom: 10px;
+
+							img {
+								width: 100%;
+								height: 100%;
+								object-fit: cover;
+							}
+						}
+
+						h2 {
+							font: 18px/1 'Bebas Neue';
+							color: #444;
+							text-align: right;
+							padding-bottom: 30px;
+							position: relative;
+							border-bottom: 1px solid #666;
+
+							span {
+								position: absolute;
+								top: 0;
+								left: 0;
+								text-align: left;
+								font: 20px/1 'Bebas Neue';
+								color: #444;
+							}
+						}
+					}
+					&:hover {
+						background: #222;
+						transform: scale(1.02);
+
+						h2 {
+							color: #bbb;
+
+							span {
+								color: #bbb;
+							}
+						}
+					}
+				}
 			}
 		}
 	}
@@ -134,46 +274,200 @@
 
 @media screen and (max-width: $tablet) {
 	.gallery {
-		.campaign {
-			.inner {
-				width: 100%;
-				padding: 0 30px;
-
-				.wrap_campaign {
+		> .inner {
+			.campaign {
+				.wrap {
 					article {
-						width: 49%;
+						width: 32%;
+						margin-right: 2%;
+						margin-bottom: 40px;
 
-						span {
-							&::after {
-								width: 25vw;
+						&:nth-of-type(1) {
+							width: 32%;
+							height: 350px;
+
+							.pic {
+								height: 300px;
+							}
+						}
+
+						&:nth-of-type(3n) {
+							margin-right: 0;
+						}
+
+						&:nth-of-type(4),
+						&:nth-of-type(7) {
+							margin-right: 2%;
+						}
+
+						&:nth-of-type(11) {
+							width: 32%;
+							margin-right: 2%;
+						}
+						&:nth-of-type(12) {
+							height: 350px;
+
+							.pic {
+								height: 300px;
+							}
+						}
+
+						&:nth-of-type(15) {
+							width: 32%;
+							margin-right: 0;
+						}
+						&:nth-of-type(16) {
+							width: 32%;
+						}
+						&:nth-of-type(20) {
+							width: 66%;
+							margin-right: 0;
+						}
+					}
+				}
+			}
+			.shop {
+				> .wrap {
+					border: 1px solid #666;
+
+					article {
+						width: 50%;
+						border-bottom: 1px solid #666;
+
+						&:nth-of-type(2n) {
+							border-left: 1px solid #666;
+						}
+						&:nth-of-type(2),
+						&:nth-of-type(5),
+						&:nth-of-type(8),
+						&:nth-of-type(11),
+						&:nth-of-type(14),
+						&:nth-of-type(17),
+						&:nth-of-type(20),
+						&:nth-of-type(23),
+						&:nth-of-type(26),
+						&:nth-of-type(29) {
+							.article_wrap {
+								border-right: 1px solid transparent;
+								border-left: 1px solid transparent;
+							}
+						}
+
+						&:nth-of-type(29),
+						&:nth-of-type(30) {
+							border-bottom: 1px solid transparent;
+							.article_wrap h2 {
+								border-bottom: 1px solid transparent;
+							}
+						}
+
+						.article_wrap {
+							.pic {
+								height: 280px;
+							}
+
+							h2 {
+								text-align: center;
+								border-bottom: 1px solid transparent;
+
+								span {
+									display: none;
+								}
 							}
 						}
 					}
 				}
 			}
 		}
-		.shop {
-			.inner {
-				width: 100%;
-				padding: 0 30px;
+	}
+}
+
+@media screen and (max-width: 769px) {
+	.gallery > .inner {
+		.campaign {
+			.wrap {
+				article {
+					width: 49%;
+					margin-right: 2%;
+
+					&:nth-of-type(1) {
+						width: 49%;
+					}
+					&:nth-of-type(3),
+					&:nth-of-type(9),
+					&:nth-of-type(15) {
+						margin-right: 2%;
+					}
+
+					&:nth-of-type(2n) {
+						margin-right: 0;
+					}
+
+					&:nth-of-type(11) {
+						width: 49%;
+					}
+
+					&:nth-of-type(15) {
+						width: 49%;
+					}
+					&:nth-of-type(16) {
+						width: 49%;
+					}
+					&:nth-of-type(20) {
+						width: 49%;
+					}
+				}
 			}
+		}
+		.shop {
 		}
 	}
 }
 
 @media screen and (max-width: $mobile) {
-	.gallery {
+	.gallery > .inner {
 		.campaign {
-			.inner {
-				.wrap_campaign {
-					article {
-						width: 100%;
+			.wrap {
+				article {
+					width: 100%;
+					margin-right: 0%;
 
-						span {
-							&::after {
-								width: 45vw;
-							}
-						}
+					&:nth-of-type(1) {
+						width: 100%;
+					}
+					&:nth-of-type(3),
+					&:nth-of-type(9),
+					&:nth-of-type(15) {
+						margin-right: 0;
+					}
+
+					&:nth-of-type(2n) {
+						margin-right: 0;
+					}
+
+					&:nth-of-type(11) {
+						width: 100%;
+					}
+
+					&:nth-of-type(15) {
+						width: 100%;
+					}
+					&:nth-of-type(16) {
+						width: 100%;
+					}
+					&:nth-of-type(20) {
+						width: 100%;
+					}
+				}
+			}
+		}
+		.shop {
+			> .wrap {
+				article {
+					width: 100%;
+
+					&:nth-of-type(2n) {
+						border-left: 1px solid transparent;
 					}
 				}
 			}
