scroll,main 컨텐츠 추가

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,9 +14,10 @@ $mobile: 539px;
 @import './main/women';
 @import './main/men';
 @import './main/rolling';
-@import './main/textbox';
+@import './main/stories';
 @import './main/banner';
 @import './main/news';
+@import './main/btns';
 
 //sub
 @import './sub/about';
