--- a/src/scss/common/_footer.scss
+++ b/src/scss/common/_footer.scss
@@ -13,15 +13,13 @@ footer {
 			li {
 				display: inline-block;
 				margin-right: 10px;
+				font: 18px/1 'Bebas Neue';
+				color: #222;
+				letter-spacing: 0.5px;
+				cursor: pointer;
 
-				a {
-					font: 18px/1 'Bebas Neue';
-					color: #222;
-					letter-spacing: 0.5px;
-
-					&:hover {
-						color: #6fd885;
-					}
+				&:hover {
+					color: #6fd885;
 				}
 			}
 		}
@@ -76,18 +74,15 @@ footer {
 			li {
 				display: inline-block;
 				margin-right: 10px;
+				font-size: 16px;
+				color: #222;
+				cursor: pointer;
 
 				&:last-child {
 					margin-right: 0;
 				}
-
-				a {
-					font-size: 15px;
-					color: #222;
-
-					&:hover {
-						color: #6fd885;
-					}
+				&:hover {
+					color: #6fd885;
 				}
 			}
 		}
