--- a/src/scss/main/_banner.scss
+++ b/src/scss/main/_banner.scss
@@ -1,18 +1,66 @@
 #banner {
 	width: 100%;
-	background: #eee;
+	background: #010101;
+	padding: 80px 0;
 
 	.inner {
 		width: 1180px;
-		min-height: 500px;
-		margin: 100px auto;
-		padding: 50px 0;
+		margin: 0 auto;
 
-		h1 {
-			font: normal 32px/1 'Bebas Neue';
-			color: #222;
-			letter-spacing: 2px;
-			margin-bottom: 50px;
+		.wrap_banner {
+			width: 100%;
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+			align-items: center;
+
+			article {
+				width: 65%;
+
+				h1 {
+					font: 60px/1 'Bebas Neue';
+					color: #eee;
+					letter-spacing: 2px;
+					margin-bottom: 20px;
+				}
+				h2 {
+					font: 24px/1.2 'Bebas Neue';
+					color: #aaa;
+					letter-spacing: 1px;
+					margin-bottom: 20px;
+				}
+				p {
+					font: 16px/1.2 'Smooch Sans';
+					color: #aaa;
+					margin-bottom: 50px;
+				}
+				button {
+					width: 160px;
+					height: 36px;
+					border-radius: 18px;
+					font: 16px/1 'Bebas Neue';
+					color: #eee;
+					letter-spacing: 2px;
+					background: #222;
+					border: 1px solid #eee;
+					cursor: pointer;
+
+					&:hover {
+						background: #eee;
+						color: #222;
+					}
+				}
+			}
+			.pic {
+				width: 30%;
+				height: 400px;
+
+				img {
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+			}
 		}
 	}
 }
@@ -21,7 +69,45 @@
 	#banner {
 		.inner {
 			width: 100%;
-			padding: 50px 30px;
+			padding: 0 30px;
+
+			.wrap_banner {
+				article {
+					width: 50%;
+					h1 {
+						font-size: 8vw;
+					}
+					p {
+						display: none;
+					}
+				}
+				.pic {
+					width: 50%;
+					height: auto;
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: $mobile) {
+	#banner {
+		padding: 50px 0;
+
+		.inner {
+			.wrap_banner {
+				article {
+					width: 100%;
+					text-align: center;
+
+					h1 {
+						font-size: 15vw;
+					}
+				}
+				.pic {
+					width: 100%;
+				}
+			}
 		}
 	}
 }
