--- a/src/scss/main/_news.scss
+++ b/src/scss/main/_news.scss
@@ -1,16 +1,19 @@
 #news {
 	width: 100%;
+	min-height: 500px;
+	padding: 50px 0;
+	margin-bottom: 100px;
+	margin-top: 100px;
 
 	.inner {
 		width: 1180px;
-		min-height: 500px;
-		margin: 100px auto;
+		margin: 0 auto;
 
 		h1 {
 			font: normal 32px/1 'Bebas Neue';
 			color: #222;
 			letter-spacing: 2px;
-			margin-bottom: 50px;
+			margin-bottom: 30px;
 			position: relative;
 		}
 
@@ -61,6 +64,35 @@
 		.inner {
 			width: 100%;
 			padding: 0 30px;
+
+			.wrap {
+				article {
+					width: 49%;
+					height: 350px;
+					margin-right: 2%;
+					overflow: hidden;
+					margin-bottom: 2%;
+
+					&:nth-of-type(2n) {
+						margin-right: 0;
+						border-left: 1px solid #ddd;
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: $mobile) {
+	#news {
+		.inner {
+			.wrap {
+				article {
+					width: 100%;
+					height: auto;
+					margin-right: 0;
+				}
+			}
 		}
 	}
 }
