--- a/src/scss/main/_rolling.scss
+++ b/src/scss/main/_rolling.scss
@@ -1,10 +1,13 @@
 #rolling {
 	width: 100%;
+	height: 100vh;
+	padding: 50px 0;
+	margin-bottom: 100px;
+	background: #eee;
 
 	.inner {
 		width: 1180px;
-		min-height: 500px;
-		margin: 100px auto;
+		margin: 0 auto;
 
 		h1 {
 			font: normal 32px/1 'Bebas Neue';
