--- a/src/scss/main/_women.scss
+++ b/src/scss/main/_women.scss
@@ -1,16 +1,81 @@
 #women {
 	width: 100%;
+	height: 100vh;
+	padding: 50px 0;
+	margin-bottom: 100px;
 
 	.inner {
 		width: 1180px;
-		min-height: 500px;
-		margin: 100px auto;
+		height: 100%;
+		margin: 0 auto;
 
-		h1 {
-			font: normal 32px/1 'Bebas Neue';
-			color: #222;
-			letter-spacing: 2px;
-			margin-bottom: 50px;
+		.wrap_women {
+			width: 100%;
+			height: 100%;
+			position: relative;
+
+			h1 {
+				font: normal 120px/1 'Bebas Neue';
+				color: #222;
+				letter-spacing: 2px;
+				position: absolute;
+				right: 0;
+				top: 0;
+				writing-mode: vertical-rl;
+			}
+
+			article {
+				width: 400px;
+				height: 55vh;
+				display: flex;
+				flex-wrap: wrap;
+				justify-content: space-between;
+
+				&:nth-of-type(1) {
+					position: absolute;
+					top: 0;
+					left: 0;
+				}
+				&:nth-of-type(2) {
+					position: absolute;
+					bottom: 0;
+					left: 45%;
+				}
+
+				.pic {
+					width: 80%;
+					height: 100%;
+
+					img {
+						width: 100%;
+						height: 100%;
+						object-fit: cover;
+					}
+				}
+				.txt {
+					width: 20%;
+					position: relative;
+
+					h2 {
+						position: absolute;
+						top: 30px;
+						left: 50%;
+						transform: translateX(-50%);
+						font: 40px/1 'Bebas Neue';
+						color: #222;
+					}
+					p {
+						position: absolute;
+						bottom: 0;
+						left: 50%;
+						transform: translateX(-50%);
+						writing-mode: vertical-rl;
+						font: 20px/1 'Smooch Sans';
+						color: #222;
+						letter-spacing: 0.5px;
+					}
+				}
+			}
 		}
 	}
 }
@@ -20,6 +85,79 @@
 		.inner {
 			width: 100%;
 			padding: 0 30px;
+
+			.wrap_women {
+				h1 {
+					font-size: 32px;
+					margin-bottom: 30px;
+					position: relative;
+					left: 0;
+					writing-mode: horizontal-tb;
+				}
+
+				article {
+					width: 49%;
+					height: 70vh;
+					display: block;
+					float: left;
+
+					&:nth-of-type(1) {
+						position: relative;
+						margin-right: 2%;
+					}
+					&:nth-of-type(2) {
+						position: relative;
+						left: 0;
+					}
+
+					.pic {
+						width: 100%;
+					}
+					.txt {
+						width: 100%;
+						height: 60px;
+
+						h2 {
+							position: relative;
+							top: 0;
+							left: 0;
+							transform: translateX(0);
+							line-height: 60px;
+							float: left;
+							width: 20%;
+						}
+						p {
+							position: relative;
+							bottom: 0;
+							left: 0;
+							transform: translateX(0);
+							writing-mode: horizontal-tb;
+							float: left;
+							line-height: 60px;
+							text-align: right;
+							width: 80%;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: $mobile) {
+	#women {
+		.inner {
+			.wrap_women {
+				article {
+					width: 100%;
+					height: auto;
+
+					&:nth-of-type(1) {
+						margin-right: 0;
+						margin-bottom: 20px;
+					}
+				}
+			}
 		}
 	}
 }
