--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,10 +14,12 @@ $mobile: 539px;
 @import './main/visual';
 @import './main/women';
 @import './main/men';
+@import './main/vids';
 @import './main/rolling';
 @import './main/stories';
 @import './main/banner';
 @import './main/news';
+@import './main/member';
 @import './main/btns';
 
 //sub
