--- a/src/scss/main/_news.scss
+++ b/src/scss/main/_news.scss
@@ -9,12 +9,28 @@
 		width: 1180px;
 		margin: 0 auto;
 
-		h1 {
-			font: normal 32px/1 'Bebas Neue';
-			color: #222;
-			letter-spacing: 2px;
-			margin-bottom: 30px;
+		.tit {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+			align-items: flex-start;
 			position: relative;
+			margin-bottom: 100px;
+
+			h1 {
+				float: left;
+				font: normal 50px/1 'Bebas Neue';
+				color: #222;
+				letter-spacing: 2px;
+				border-top: 5px solid #222;
+				padding-top: 30px;
+				position: relative;
+			}
+			p {
+				width: 60%;
+				font: 16px/1.2 'Smooch Sans';
+				color: #666;
+			}
 		}
 
 		.wrap {
@@ -61,9 +77,23 @@
 
 @media screen and (max-width: $tablet) {
 	#news {
+		margin: 50px 0;
+
 		.inner {
 			width: 100%;
 			padding: 0 30px;
+
+			.tit {
+				margin-bottom: 30px;
+
+				h1 {
+					font-size: 32px;
+					border-top: 0;
+				}
+				p {
+					display: none;
+				}
+			}
 
 			.wrap {
 				article {
@@ -72,6 +102,7 @@
 					margin-right: 2%;
 					overflow: hidden;
 					margin-bottom: 2%;
+					border: 1px solid #ddd;
 
 					&:nth-of-type(2n) {
 						margin-right: 0;
