--- a/src/scss/main/_vids.scss
+++ b/src/scss/main/_vids.scss
@@ -1,28 +1,170 @@
 #vids {
 	width: 100%;
-	height: 100vh;
-	padding: 50px 0;
+	padding: 150px 0;
 	margin-bottom: 100px;
-	background: #eee;
 
 	.inner {
 		width: 1180px;
 		margin: 0 auto;
 
-		h1 {
-			font: normal 32px/1 'Bebas Neue';
-			color: #222;
-			letter-spacing: 2px;
-			margin-bottom: 50px;
+		.tit {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+			align-items: flex-start;
+			position: relative;
+			margin-bottom: 100px;
+
+			h1 {
+				float: left;
+				font: normal 50px/1 'Bebas Neue';
+				color: #222;
+				letter-spacing: 2px;
+				border-top: 5px solid #222;
+				padding-top: 30px;
+				position: relative;
+			}
+			p {
+				width: 60%;
+				font: 16px/1.2 'Smooch Sans';
+				color: #666;
+			}
+		}
+		.wrap {
+			position: relative;
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+			align-items: center;
+
+			article {
+				width: 33.33%;
+				height: 270px;
+				overflow: hidden;
+				position: relative;
+				transform: scale(1);
+				z-index: 1;
+				transition: 0.5s;
+				cursor: pointer;
+
+				.pic {
+					width: 100%;
+					height: 100%;
+					position: relative;
+					transition: 0.2s;
+
+					&::after {
+						content: '';
+						display: block;
+						width: 100%;
+						height: 100%;
+						position: absolute;
+						top: 0;
+						left: 0;
+						background: rgba(111, 216, 134, 0.5);
+						opacity: 0;
+					}
+					img {
+						width: 100%;
+						height: 100%;
+						object-fit: cover;
+						transform: scale(1.25);
+					}
+				}
+
+				h2 {
+					position: absolute;
+					bottom: 0;
+					left: 0;
+					padding: 20px;
+					font: 24px/1 'Bebas Neue';
+					color: #eee;
+					letter-spacing: 1px;
+					opacity: 0;
+					transition: 0.5s;
+
+					span {
+						display: block;
+						margin-top: 5px;
+						font: 14px/1 'Smooch Sans';
+						color: #eee;
+					}
+				}
+
+				&:hover {
+					transform: scale(1.15);
+					z-index: 2;
+					box-shadow: -20px 20px 30px rgba(0, 0, 0, 0.3);
+
+					.pic {
+						&::after {
+							opacity: 1;
+						}
+						img {
+							filter: grayscale(1);
+						}
+					}
+
+					h2 {
+						opacity: 1;
+					}
+				}
+			}
 		}
 	}
 }
 
 @media screen and (max-width: $tablet) {
 	#vids {
+		padding: 50px 0;
 		.inner {
 			width: 100%;
 			padding: 0 30px;
+
+			.tit {
+				margin-bottom: 30px;
+
+				h1 {
+					font-size: 32px;
+					border-top: 0;
+				}
+				p {
+					display: none;
+				}
+			}
+			.wrap {
+				article {
+					width: 100%;
+					margin-bottom: 5px;
+
+					&:hover {
+						transform: scale(1.1);
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: $mobile) {
+	#vids {
+		.inner {
+			width: 100%;
+			padding: 0 30px;
+
+			.wrap {
+				article {
+					height: 180px;
+
+					h2 {
+						font-size: 18px;
+					}
+
+					&:hover {
+						transform: scale(1.1);
+					}
+				}
+			}
 		}
 	}
 }
