--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,7 +15,7 @@ $mobile: 539px;
 @import './main/women';
 @import './main/men';
 @import './main/vids';
-@import './main/rolling';
+@import './main/campaign';
 @import './main/stories';
 @import './main/banner';
 @import './main/news';
