--- a/src/scss/main/_visual.scss
+++ b/src/scss/main/_visual.scss
@@ -1,7 +1,53 @@
 #visual {
 	width: 100%;
 	height: 100vh;
-	background: #eee;
+	background: #fff;
 	position: relative;
+	overflow: hidden;
 	z-index: 1;
+
+	video {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		object-position: right center;
+	}
+
+	.inner {
+		width: 1180px;
+		margin: 0 auto;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		text-align: center;
+
+		h1 {
+			font: 10vw/1 'Bebas Neue';
+			color: #222;
+			margin-bottom: 10px;
+		}
+		p {
+			font: 1.5vw/1.5 'Smooch Sans';
+			color: #222;
+			margin-bottom: 40px;
+		}
+		span {
+			width: 100%;
+			display: block;
+			margin: 0 auto;
+			font: 18px/40px 'Smooch Sans';
+			color: #222;
+			width: 120px;
+			height: 40px;
+			border: 1px solid #222;
+			border-radius: 20px;
+			cursor: pointer;
+			transition: 0.5s;
+
+			&:hover {
+				transform: scale(1.1);
+			}
+		}
+	}
 }
