--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,7 @@ $mobile: 539px;
 //common
 @import './common/reset';
 @import './common/header';
+@import './common/menu';
 @import './common/footer';
 @import './common/layout';
 @import './common/popup';
